fixed spacing/sizing issue

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	padding: 0px 30px 0px 30px;
+	padding: 0px 30px 0px 20px;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
@@ -116,7 +116,7 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	background-color: darkgreen;
-	padding: 0px 30px 0px 30px;
+	padding: 0px 30px 0px 20px;
 }
 
 footer i {
@@ -211,7 +211,7 @@ hr {
 	.hwrap p { font-size: 25px; }
 }
 
-@media (max-width: 1027px) {
+@media (max-width: 1033px) {
 	.checkbox-hack .hambutton {
 		display: block;
 		position: fixed;
